# oatpp-postgresql

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yaml
src/: CMakeLists.txt
src/oatpp-postgresql/: Connection.cpp  Connection.hpp  ConnectionProvider.cpp  ConnectionProvider.hpp  Executor.cpp  Executor.hpp  QueryResult.cpp  QueryResult.hpp  Types.hpp  orm.hpp
src/oatpp-postgresql/mapping/: Deserializer.cpp  Deserializer.hpp  Oid.hpp  PgArray.cpp  PgArray.hpp  ResultMapper.cpp  ResultMapper.hpp  Serializer.cpp  Serializer.hpp  TypeMapper.cpp  TypeMapper.hpp
src/oatpp-postgresql/mapping/type/: ByteArray.cpp  ByteArray.hpp  Uuid.cpp  Uuid.hpp
src/oatpp-postgresql/ql_template/: Parser.cpp  Parser.hpp  TemplateValueProvider.cpp  TemplateValueProvider.hpp
test/: CMakeLists.txt
test/oatpp-postgresql/: tests.cpp
test/oatpp-postgresql/migration/: ArrayTest.sql  ByteArrayTest.sql  CharacterTest.sql  ContainerTest.sql  EnumAsStringTest.sql  FloatTest.sql  IntTest.sql  InterpretationTest.sql
test/oatpp-postgresql/ql_template/: ParserTest.cpp  ParserTest.hpp
test/oatpp-postgresql/types/: ArrayTest.cpp  ArrayTest.hpp  ByteArrayTest.cpp  ByteArrayTest.hpp  ByteArrayTypeTest.cpp  ByteArrayTypeTest.hpp  CharacterTest.cpp  CharacterTest.hpp  ContainerTest.cpp  ContainerTest.hpp  EnumAsStringTest.cpp  EnumAsStringTest.hpp  FloatTest.cpp  FloatTest.hpp  IntTest.cpp  IntTest.hpp  InterpretationTest.cpp  InterpretationTest.hpp
utility/: install-oatpp-modules.sh  module-uninstall.sh
